--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <html>
   <head>
     <title>My Website Title</title>
+    <script type="text/javascript" src="javascript.js"></script>
   </head>
   <body>
     Hello, World!
+</br>
+    <button onclick="helloConsole();">Hello, Console</button>
+    <button onclick="helloPopup();">Hello, Pop-up</button>
+    <button onclick="helloBrowser();">Hello, Browser</button>
+    <button onclick="helloStranger();">Hello, Stranger</button>
+    <p id="hello"></p>
   </body>
 </html>
